--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
+<!--Head-->
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon</title>
 </head>
 
 <body>
+    <!--The header-->
     <header>
         <nav>
         <h1>Hori<span id="seo">seo</span>n</h1>
@@ -24,7 +25,9 @@
             </ul>
         </nav>
     </header>
+    <!--Hero jumbotron-->
     <section class="hero"></section>
+    <!--The content section-->
     <section class="content">
         <article  id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Desk with coffee, laptop, and notebook with network drawings" class="float-left" />
@@ -48,35 +51,37 @@
             </p>
         </article>
     </section>
+    <!--The benefits section-->
     <section class="benefits">
-        <div class="benefit-lead">
+        <article class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Cog signifying customers flowing into a hopper, and turning into money." />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </article>
+        <article class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Human with a light bulb thats turned on for a head." />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </article>
+        <article class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Gear cog making money."></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
+        </article>
     </section>
-    <div class="footer">
+    <!--The footer-->
+    <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
