--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <!--Head-->
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
@@ -29,21 +29,21 @@
     <section class="hero"></section>
     <!--The content section-->
     <section class="content">
-        <article  id="search-engine-optimization" class="search-engine-optimization">
+        <article  id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Desk with coffee, laptop, and notebook with network drawings" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
-        <article id="online-reputation-management" class="online-reputation-management">
+        <article id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="Someone looking at thier laptop with a bar graph of reputation going up." class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
-        <article id="social-media-marketing" class="social-media-marketing">
+        <article id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" alt="Group of people using multiple social media platforms." class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -76,7 +76,7 @@
         </article>
     </section>
     <!--The footer-->
-    <footer class="footer">
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
