Added title element to jumbotron cleaned up the html with spaces

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
+    
 <!--Head-->
 <head>
     <meta charset="UTF-8" />
@@ -7,7 +8,9 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
+<!--The body-->
 <body>
+
     <!--The header-->
     <header>
         <nav>
@@ -25,10 +28,14 @@
             </ul>
         </nav>
     </header>
+
     <!--Hero jumbotron-->
-    <section class="hero"></section>
+    <section class="hero" title="Team collaborating on project"></section>
+
     <!--The content section-->
     <section class="content">
+
+        <!--Search engine optimization-->
         <article  id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Desk with coffee, laptop, and notebook with network drawings" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -36,6 +43,8 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
+
+        <!--Online reputation management-->
         <article id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="Someone looking at thier laptop with a bar graph of reputation going up." class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -43,6 +52,8 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
+
+        <!--Social media marketing-->
         <article id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" alt="Group of people using multiple social media platforms." class="float-left" />
             <h2>Social Media Marketing</h2>
@@ -51,8 +62,11 @@
             </p>
         </article>
     </section>
+
     <!--The benefits section-->
     <section class="benefits">
+
+        <!--Lead generation-->
         <article class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Cog signifying customers flowing into a hopper, and turning into money." />
@@ -60,6 +74,8 @@
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </article>
+
+        <!--Brand awareness-->
         <article class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Human with a light bulb thats turned on for a head." />
@@ -67,6 +83,8 @@
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </article>
+
+        <!--Cost management-->
         <article class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Gear cog making money."></img>
@@ -75,6 +93,7 @@
             </p>
         </article>
     </section>
+
     <!--The footer-->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
